--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,30 +8,8 @@
     background-color: #000;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: auto;
     width: auto;
-}
-
-.App .header {
-    display: flex;
-    flex-direction: row;
-    padding : 0 30px 0 30px;
-    width: 100%;
-    height: 75px;
-    background-color: #000;
-    color: #fff;
-    align-items: center;
-}
-
-img {
-    margin-left: 5px;
-    width: 48px;
-    height: 48px;
-}
-
-a{
-    text-decoration: inherit;
-    color: inherit;
 }
 
 .form-section {
@@ -51,12 +29,6 @@ a{
     justify-content: center;
     height: 100%;
     margin: 10px;
-}
-
-.logo {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 18px;
-    font-weight: 600;
 }
 
 .title-section {
